	- ntfsclone: detect and hint users if the destination fs doesn't support
	  sparse files.  (Szaka)
	- Fix memory managament error in ntfs_inode_close.  (Yura)
	- Add new utility - ntfsmount. It's a FUSE module that
	  rely on libntfs.  (Yura)
	- ntfsresize: support bad clusters list ($BadClus:$Bad), a.k.a. disks
	  having bad sectors if the new --bad-sectors option is used.  (Szaka)

20/06/2005 - 1.10.0 - Lots of new features, enhancements, and bug fixes.

	- Add start_vcn parameter to ntfs_get_size_for_mapping_pairs() and
	  ntfs_mapping_pairs_build() and adapt all callers.
	- Bump library version due to source level API change above.
	- Add ntfs_debug() and ntfs_error() to make kernel<->userspace porting
	  easier.
	- ntfsinfo: Added dumping of index records from $INDEX_ROOT and 
	  $INDEX_ALLOCATION.  (Yura)
	- ntfsinfo: Changed message for resident $INDEX_ALLOCATION to print
	  error, because $INDEX_ALLOCATION can't be resident.  (Yura)
	- ntfscp: Not longer update $FILE_NAME attributes, because Windows
	  doesn't update them unless a rename operation occur.  (Yura)
	- ntfsinfo: dump attribute list entries in verbose mode and display
	  attribute instance of all attributes.  (Yura)
	- new API: attrlist.[ch]::ntfs_attrlist_entry_add add entry to
	  attribute list.  (Yura)
	- ntfs_inode_sync: write out dirty attribute list from cache to
	  disk.  (Yura)
	- Add stop_vcn parameter to ntfs_mapping_pairs_build() and adapt
	  all callers.  This allows filling an attribute extent with mapping
	  pairs and then continuing in a different extent once the first extent
	  is full.  (Yura)
	- Remove vol->nr_mft_records and update all users.  (Anton)
	- Add new API to mft.[hc]::ntfs_mft_record_{alloc,free}().  (Anton)
	- Sync inodes before closing attributes or the umount fails.  (Anton)
	- Close extent inodes in ntfs_inode_close() when closing a base inode
	  and fix handling of ->extent_nis for base inodes.  (Anton)